Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 <a name="supported-modules" class="anchor" href="#supported-modules"><span class="octicon octicon-link"></span></a>Supported Modules</h3>
 
 <ul>
-<li>basic</li>
+<li>autoconf (v2.69)</li>
+<li>basic (a bundle)</li>
 <li>ghi</li>
 <li>git</li>
 <li>go (v1.2)</li>
@@ -66,6 +67,8 @@
 <li>rails</li>
 <li>rbenv (v0.4.0)</li>
 <li>redis (v2.6.7)</li>
+<li>ruby (v2.1.1)</li>
+<li>rubygems (v2.2.2)</li>
 <li>ruby-install</li>
 <li>rvm</li>
 </ul>
